fix: hero banner slider alignment

--- a/packages/client/src/assets/scss/components/_banner.scss
+++ b/packages/client/src/assets/scss/components/_banner.scss
@@ -30,12 +30,13 @@
       font-size: 1.5rem;
       color: #383838;
       font-weight: normal;
+      padding: 20px 0;
       @media (max-width: 1199.98px) {
         font-size: 1rem;
         width: 100% !important;
       }
-      @media (max-width: 575.98px) {
-        padding: 0 40px;
+      @media (max-width: 991.98px) {
+        padding: 10px 15px;
       }
     }
   }
