--- a/packages/client/src/assets/scss/components/_slider.scss
+++ b/packages/client/src/assets/scss/components/_slider.scss
@@ -2,6 +2,18 @@
   .react-multiple-carousel__arrow {
     background: $primary;
     top: 40%;
+    @media (max-width: 1199.98px) {
+      min-width: 35px;
+      min-height: 35px;
+    }
+    @media (max-width: 991.98px) {
+      min-width: 20px;
+      min-height: 20px;
+      &::before {
+        font-size: 1rem;
+      }
+    }
+
     @media (max-width: 767.98px) {
       min-width: 30px;
       min-height: 30px;
@@ -15,23 +27,30 @@
   }
   .react-multiple-carousel__arrow--left {
     left: calc(1% + 1px);
+    @media (max-width: 1199.98px) {
+      left: calc(1% + 1px);
+    }
   }
   .react-multi-carousel-item {
     padding: 100px 0px 150px;
     @media (max-width: 1339.98px) {
       padding: 100px 0px 60px;
     }
+    @media (max-width: 1199.98px) {
+      padding: 100px 25px 60px 40px !important;
+    }
+
     @media (max-width: 767.98px) {
-      padding: 50px 0px 60px;
+      padding: 35px 25px 60px 40px !important;
     }
     @media (max-width: 575.98px) {
-      padding: 50px 0px 50px;
+      padding: 35px 19px 60px 15px !important;
     }
   }
-  .slider-left-content{
-     @media (max-width: 1200px) and (min-width: 992px){
-       margin-left:60px;
-     }
+  .slider-left-content {
+    @media (max-width: 1200px) and (min-width: 992px) {
+      margin-left: 60px;
+    }
   }
 }
 .testimonial-slider {
@@ -59,11 +78,6 @@
       margin: 0px auto;
     }
   }
-  // .line{
-  //   width:2px;
-  //   height: 100px;
-  //   border: 1px solid $primary;
-  // }
   .react-multi-carousel-dot-list {
     top: 0px;
     bottom: unset !important;
